<resources>
    <string name="app_name">FaiSoldi</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_form_menu">FormMenu</string>
    <string name="check_name">Completa Il Nome</string>
    <string name="check_surname">Controla IL Tuo Cognome</string>
    <string name="check_email">Controla La Tua Email</string>
    <string name="check_password">Completa La Password</string>
    <string name="check_state">Completa Il Stato</string>
    <string name="check_phone">Completa Il Numero Di Telefono</string>
    <string name="wait">ASPETTA!!</string>
    <string name="not_go">PRIMA DI ANDARE...</string>
    <string name="descriptions">Ti stai facendo scappare il sistema di trading unico nel suo genere in grado di farti guadagnare €1.000 al giorno in maniera totalmente automatica!</string>
    <string name="start_now">Inizia Ora</string>
    <string name="invest_free">Nessuna carta di credito richiesta per avere la tua App Semantic Investment gratuita.</string>
    <string name="count_down_time">Tempo restante PRIMA CHE L’OFFERTA SCADA :</string>
    <string name="start">PER COMINCIARE</string>
    <string name="complete_the_field">COMPILA IL MODULO IN BASSO :</string>
    <string name="one_thounsand_bonus">1.000+ EURO AL GIORNO - COMINCIA ORA</string>
    <string name="complete_registrations">COMPLETA LA REGISTRAZIONE E OTTIENI IMMEDIATAMENTE L\'ACCESSO GRATUITO</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="insert_email">Inserisci la tua E-mail</string>


    <string-array name="states">
        <item>Nessuna Città</item>
        <item>United States</item>
        <item>United States</item>
        <item>United Kingdom</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Bouvet Island</item>
        <item>Brazil</item>
        <item>British Indian Ocean Territory</item>
        <item>Brunei Darussalam</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Christmas Island</item>
        <item>Cocos (Keeling) Islands</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Congo, The Democratic Republic of The</item>
        <item>Cook Islands</item>
        <item>Costa Rica</item>
        <item>Cote D'ivoire</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Falkland Islands (Malvinas)</item>
        <item>Faroe Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>French Guiana</item>
        <item>French Polynesia</item>
        <item>French Southern Territories</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Heard Island and Mcdonald Islands</item>
        <item>Holy See (Vatican City State)</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran, Islamic Republic of</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Korea, Democratic People's Republic of</item>
        <item>Korea, Republic of</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Lao People's Democratic Republic</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libyan Arab Jamahiriya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macao</item>
        <item>Macedonia, The Former Yugoslav Republic of</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Mexico</item>
        <item>Micronesia, Federated States of</item>
        <item>Moldova, Republic of</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montserrat</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>Netherlands Antilles</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Niue</item>
        <item>Norfolk Island</item>
        <item>Northern Mariana Islands</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestinian Territory, Occupied</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Pitcairn</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Reunion</item>
        <item>Romania</item>
        <item>Russian Federation</item>
        <item>Rwanda</item>
        <item>Saint Helena</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Saint Vincent and The Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia and Montenegro</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Georgia and The South Sandwich Islands</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Svalbard and Jan Mayen</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syrian Arab Republic</item>
        <item>Taiwan, Province of China</item>
        <item>Tajikistan</item>
        <item>Tanzania, United Republic of</item>
        <item>Thailand</item>
        <item>Timor-leste</item>
        <item>Togo</item>
        <item>Tokelau</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Turks and Caicos Islands</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>United States Minor Outlying Islands</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Viet Nam</item>
        <item>Virgin Islands, British</item>
        <item>Virgin Islands, U.S.</item>
        <item>Wallis and Futuna</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
    </string-array>



    <string name="lake_tahoe_image">Image of Lake Tahoe</string>
    <string name="lake_tahoe_title">Lake Tahoe</string>
    <string name="android_button">Android Button</string>
    <string name="centering_views">Centering Views</string>
    <string name="centered_button">Centered Button</string>
    <string name="basic_arrange">Basic Arrange</string>
    <string name="advanced_arrangement">Advanced Arrangement</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="basic_chains">Basic Chains</string>
    <string name="constraintset">ConstraintSet</string>
    <string name="advanced_chains">Advanced Chains</string>
    <string name="guidelines">Guidelines</string>
    <string name="button_1">Button 1</string>
    <string name="button_text">Button 1234</string>
    <string name="button_text_12">Button 12</string>
    <string name="arrange">Arrange</string>
    <string name="button">Button</string>
    <string name="one">1</string>
    <string name="four">4</string>
    <string name="six">6</string>
    <string name="advanced_arrange">Advanced Arrange</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="five">5</string>
    <string name="zero_point_zero">0.0</string>
    <string name="dot">.</string>
    <string name="centering">Basic Centering</string>
    <string name="big_android_icon">Big Android Icon</string>
    <string name="textview">TextView</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="add">+</string>
    <string name="equals">=</string>
    <string name="subtract">−</string>

</resources>
