<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundeEmail"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.98" />

        <TextView
            android:id="@+id/txt_traiding"
            style="@style/DescriptionTraiding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/guideline1"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline5" />

        <ImageView
            android:id="@+id/img_daily_profit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="TODO"
            android:scaleType="fitXY"
            android:src="@drawable/logoa"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_before_go"
            style="@style/BeforeGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/txt_traiding"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/img_daily_profit"
            app:layout_constraintVertical_bias="0.89" />

        <TextView
            android:id="@+id/txt_wait"
            style="@style/TextStyleJustNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_before_go"
            app:layout_constraintEnd_toEndOf="@+id/txt_before_go"
            app:layout_constraintStart_toStartOf="@+id/txt_before_go"
            app:layout_constraintTop_toBottomOf="@+id/img_daily_profit"
            app:layout_constraintVertical_bias="1.0" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_80dp"
            android:background="@color/backgroundEmail"
            app:layout_constraintBottom_toTopOf="@+id/txt_coundoun"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline1"
            app:layout_constraintVertical_bias="0.258" />

        <TextView
            android:id="@+id/textView13"
            style="@style/DescriptionDatails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/invest_free"
            app:layout_constraintBottom_toTopOf="@+id/textView14"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintStart_toStartOf="@+id/guideline5" />

        <TextView
            android:id="@+id/textView14"
            style="@style/DescriptionDatails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_down_time"
            app:layout_constraintBottom_toTopOf="@+id/txt_coundoun"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintVertical_bias="0.772" />

        <TextView
            android:padding="@dimen/padding_8dp"
            android:id="@+id/txt_coundoun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/time_bacground"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/blackDark"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="@color/backgroundEmailInside"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/insert_email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/txt_17sp"
            app:layout_constraintBottom_toBottomOf="@+id/bt_start"
            app:layout_constraintEnd_toStartOf="@+id/bt_start"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="7"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/bt_start"/>

        <Button
            android:padding="5dp"
            android:id="@+id/bt_start"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="22dp"
            android:background="@drawable/bt_inizia_ora"
            android:text="@string/start_now"
            android:textColor="@color/blackDark"
            android:textSize="@dimen/txt_15sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@+id/txt_email"
            app:layout_constraintTop_toTopOf="@+id/view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>